--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -5,12 +5,23 @@ vars:
   PYENV_NAME: simonskripnick_editor
 
 tasks:
+  # Infrastructure Section
+
+  install:taskfile:
+    cmds:
+      - sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
+
+  install:pyenv:
+    cmds:
+      - curl https://pyenv.run | bash
+      - pyenv install --skip-existing {{ .PYTHON_VERSION }}
+      - pyenv virtualenv {{ .PYTHON_VERSION }} {{ .PYENV_NAME }} || true
+
+
   # Development Section
 
   install:
     cmds:
-      - pyenv install --skip-existing {{ .PYTHON_VERSION }}
-      - pyenv virtualenv {{ .PYTHON_VERSION }} {{ .PYENV_NAME }} || true
       - PYENV_VERSION={{ .PYENV_NAME }} poetry install
 
   test:
@@ -22,6 +33,7 @@ tasks:
 
   deploy:build:
     cmds:
+      - task: install:pyenv
       - task: install
       - task: test
 
