--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -26,20 +26,33 @@ tasks:
 
   install:
     cmds:
-      - PYENV_VERSION={{ .PYENV_NAME }} poetry install
+      - poetry install
+      - python3 -c 'import nltk; nltk.download("punkt")'
 
   test:
     cmds:
-      - pytest -s
+      - pytest -s -vv
+  
+  format:
+    cmds:
+      - isort .
+      - black .
+
+  lint:
+    cmds:
+      - ruff check .
 
 
   # Deployment Section
 
   deploy:build:
     cmds:
-      - poetry install
+      - task: install
+      - task: format
+      - task: lint
       - task: test
 
   deploy:start:
     cmds:
       - uvicorn main:app --host 0.0.0.0 --port $PORT
+    dir: ./editor
