--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -54,5 +54,6 @@ tasks:
 
   deploy:start:
     cmds:
+      - ls -lah /opt/render/nltk_data
       - uvicorn main:app --host 0.0.0.0 --port $PORT
     dir: ./editor
