--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -29,6 +29,7 @@ tasks:
       - poetry install
       - python3 -c 'import nltk; nltk.download("punkt")'
       - ls -lah /opt/render/nltk_data
+      - whoami
 
   test:
     cmds:
@@ -55,6 +56,7 @@ tasks:
 
   deploy:start:
     cmds:
+      - whoami
       - ls -lah /opt/render/nltk_data
       - uvicorn main:app --host 0.0.0.0 --port $PORT
     dir: ./editor
