--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -21,15 +21,16 @@ tasks:
     cmds:
       - curl -sSL https://install.python-poetry.org | python3 -
 
+  install:nltk:
+    cmds:
+      - python3 -c 'import nltk; nltk.download("punkt")'
+
 
   # Development Section
 
   install:
     cmds:
       - poetry install
-      - python3 -c 'import nltk; nltk.download("punkt")'
-      - ls -lah /opt/render/nltk_data
-      - whoami
 
   test:
     cmds:
@@ -56,7 +57,6 @@ tasks:
 
   deploy:start:
     cmds:
-      - whoami
-      - ls -lah /opt/render/nltk_data
+      - task: install:nltk
       - uvicorn main:app --host 0.0.0.0 --port $PORT
     dir: ./editor
