--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 fastapi = "^0.101.0"
 uvicorn = "^0.23.2"
 nltk = "^3.8.1"
+kmeans1d = "^0.3.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
